# RooUnfold

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists_forAtlasCI.txt  Doxyfile.cmake  Doxyfile.in  GNUmakefile  History.md  History.svn  MANIFEST.in  README.md  RooUnfoldConfig.cmake.in  get_dagos_bayes.sh  setup.py
doc/phystat2011/: phystat2011_adye_classes.eps
doc/unfolding2010/: adye_tim.classes.eps
examples/: RooUnfoldExample.cxx  RooUnfoldExample.py
ref/: RooUnfoldExample.cxx.ref  RooUnfoldExample.py.ref  RooUnfoldExample.py.svd.ref  RooUnfoldTest.ref  RooUnfoldTest2D.ref  RooUnfoldTest3D.ref  bayes.ref  bayes_var.ref  bbb.ref  bbb_var.ref  cleanup.sh  invert.ref  invert_var.ref  overflow.ref  something.ref  svd.ref  svd_var.ref  test_2D.ref  test_3D.ref  test_correlation.ref  test_fakes.ref  test_methods.ref  test_uncertainty.ref
src/: RooUnfold.cxx  RooUnfold.h  RooUnfoldBayes.cxx  RooUnfoldBayes.h  RooUnfoldBinByBin.cxx  RooUnfoldDagostini.cxx  RooUnfoldErrors.cxx  RooUnfoldIds.cxx  RooUnfoldIds.h  RooUnfoldInvert.cxx  RooUnfoldParms.cxx  RooUnfoldResponse.cxx  RooUnfoldSvd.cxx  RooUnfoldSvd.h  RooUnfoldTUnfold.cxx  RooUnfold_LinkDef.h  TSVDUnfold.cxx
src/RooUnfold/: __init__.py
test/: CMakeLists.txt  RooUnfoldExample-cxx.sh  RooUnfoldExample-py-bayes.sh  RooUnfoldExample-py-svd.sh  RooUnfoldExample-py.sh  RooUnfoldTest.sh  RooUnfoldTest2D.sh  RooUnfoldTest3D.sh  RooUnfold_generate_refs.cxx  RooUnfold_unit_tests.cxx  bayes_test.cxx  bbb_test.cxx  generateRef.py  generate_test.cxx  invert_test.cxx  minunit.h  response_test.cxx  svd_test.cxx  test_2D.py  test_3D.py  test_all.cxx  test_bayes.cxx  test_bbb.cxx  test_bin_correlation.py  test_fakes.py  test_invert.cxx  test_methods.py  test_overflow.py  test_something.py  test_svd.cxx  test_uncertainty.py  test_utils.py  tunfold_test.cxx  unittests.h
test/src/: ArgVars.h  RooUnfoldTest.cxx  RooUnfoldTest2D.cxx  RooUnfoldTest3D.cxx  RooUnfoldTestHarness.cxx  RooUnfoldTestHarness.h  RooUnfoldTestHarness2D.h  RooUnfoldTestHarness3D.h  RooUnfold_unit_tests.cxx  bayes_test.cxx  bbb_test.cxx  bbb_test.py  dbg.h  generate_test.cxx  invert_test.cxx  minunit.h  response_test.cxx  response_test.py  svd_test.cxx  tunfold_test.cxx  unittests.h
